src-lib/stderr
oo-bio.c: In function ‘action_osdp_BIOMATCHR’:
oo-bio.c:119:11: error: ‘cmd’ undeclared (first use in this function)
   sprintf(cmd, "/opt/osdp-conformance/run/ACU-actions/osdp_BIOMATCHR %02X %02x %02x %s",
           ^~~
oo-bio.c:119:11: note: each undeclared identifier is reported only once for each function it appears in
oo-bio.c:120:5: error: ‘blah_addr’ undeclared (first use in this function)
     blah_addr, msg->data_payload [0], msg->data_payload [1], msg->data_payload [2]);
     ^~~~~~~~~
oo-bio.c:116:8: error: unused variable ‘template_string’ [-Werror=unused-variable]
   char template_string [3000];
        ^~~~~~~~~~~~~~~
oo-bio.c:115:8: error: unused variable ‘command’ [-Werror=unused-variable]
   char command [1024];
        ^~~~~~~
oo-bio.c: In function ‘action_osdp_BIOREADR’:
oo-bio.c:211:8: error: ‘i’ undeclared (first use in this function)
   for (i=0; i<blah_template_length; i++)
        ^
oo-bio.c:211:15: error: ‘blah_template_length’ undeclared (first use in this function)
   for (i=0; i<blah_template_length; i++)
               ^~~~~~~~~~~~~~~~~~~~
oo-bio.c:213:13: error: ‘octet’ undeclared (first use in this function)
     sprintf(octet, "%02x", blah_template[k+i]);
             ^~~~~
oo-bio.c:213:28: error: ‘blah_template’ undeclared (first use in this function)
     sprintf(octet, "%02x", blah_template[k+i]);
                            ^~~~~~~~~~~~~
oo-bio.c:213:42: error: ‘k’ undeclared (first use in this function)
     sprintf(octet, "%02x", blah_template[k+i]);
                                          ^
oo-bio.c:216:11: error: ‘cmd’ undeclared (first use in this function)
   sprintf(cmd, "/opt/osdp-conformance/run/ACU-actions/osdp_BIOMATCHR %02X %02x %02x %s",
           ^~~
oo-bio.c:217:5: error: ‘blah_addr’ undeclared (first use in this function)
     blah_addr, msg->data_payload [0], msg->data_payload [1], msg->data_payload [2], template_string);
     ^~~~~~~~~
oo-bio.c:206:8: error: unused variable ‘command’ [-Werror=unused-variable]
   char command [1024];
        ^~~~~~~
cc1: all warnings being treated as errors
make: *** [Makefile:64: oo-bio.o] Error 1
